<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/frg_top_websites_header_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:padding="@dimen/margin_small">



        <TextView
            android:id="@+id/frg_top_websites_start_date_txv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Medium"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/start_date" />
        <TextView
            android:id="@+id/frg_top_websites_end_date_txv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.Medium"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/end_date" />


        <Button
            android:id="@+id/frg_top_websites_filter_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_extra_small"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/filter"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/frg_top_websites_all_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_extra_small"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/all"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/frg_top_websites_divider_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frg_top_websites_header_ll">

        <include layout="@layout/divider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frg_top_websites_header_title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frg_top_websites_divider_ll"
        android:background="@color/primary_light"
        android:padding="@dimen/margin_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.Medium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.Medium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_visits"
            android:textAppearance="@style/TextAppearance.Medium" />

    </LinearLayout>


    <com.iasmar.toronto.ui.views.custom.recyclerview.CustomSwipeRefreshLayout
        android:id="@+id/frg_top_websites_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frg_top_websites_top_five_ll"
        android:layout_below="@+id/frg_top_websites_header_title_ll"
        android:background="@color/background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/frg_top_websites_recv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/RecyclerView.TopWebsites" />
    </com.iasmar.toronto.ui.views.custom.recyclerview.CustomSwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/frg_top_websites_top_five_ll"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/frg_top_websites_top_five_but"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:clickable="false"
            android:drawablePadding="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/top_five_graph_format"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/frg_top_websites_sort_but"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/secondary"
            android:clickable="false"
            android:drawablePadding="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/sort"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>


